--- a/css/home.css
+++ b/css/home.css
@@ -19,7 +19,7 @@
     background-color: rgba(241,236,236,.4) ;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     width: 100%;
-
+    z-index: 1;
 }
 .nav{
     margin-right:8vw;
