--- a/css/team.css
+++ b/css/team.css
@@ -1,16 +1,15 @@
 .team_container{
     display: flex;
-    justify-content: center;
-}
+    overflow-x: hidden;
+    flex-direction: row;
+    width: 100%;
+ }
 .team_content{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 75px;
-    background-color: #D4EDBB;
-    width: 100%;
-    height: 66vh;
     padding-top: 200px;
+    transform:translateX(25%)
 }
 .team_h1{
     background-color: white;
@@ -42,4 +41,11 @@
 }
 .pics_container p{
     font-weight: 300;
+}
+.team_image img{
+    height: 100vh;
+}
+.team_image{
+    transform:translateX(-41%);
+    z-index: -1;
 }
