--- a/css/products.css
+++ b/css/products.css
@@ -32,7 +32,7 @@
     height: 70vh;
     margin-right: 50px;
     border-radius: 40px;
-    background: #eee;
+    background: #F4F4F4;
     transform-origin: center center;
     transform: scale(1);
     transition: transform 0.5s;
