--- a/css/team.css
+++ b/css/team.css
@@ -8,14 +8,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 200px;
+    padding-top: 250px;
     transform:translateX(25%)
 }
 .team_h1{
-    background-color: white;
+    background: #F2F2F2;
     border-radius: .5vw;
-    padding-top:.2em;
-    padding-bottom:.2em;
+    padding-top:.3em;
+    padding-bottom:.3em;
     padding:0em 1em;
     font-size: 24px;
     font-weight: 300;
