--- a/css/products.css
+++ b/css/products.css
@@ -10,9 +10,9 @@
 }
 .slider{
     width:90vw;
-    height: 70vh;
+    height: 90vh;
     margin-left: -70vw;
-    margin-top:25vh;
+    margin-top:20vh;
 }
 .slides {
     display: flex;
@@ -35,7 +35,7 @@
     background: #F4F4F4;
     transform-origin: center center;
     transform: scale(1);
-    transition: transform 0.5s;
+    transition:  0.5s;
     position: relative;
     
     display: flex;
@@ -43,6 +43,11 @@
     justify-content: space-between;
     align-items: center;
     font-size: 100px;
+  }
+  .slides>div:hover{
+      height: 75vh;
+      width: 75vw;
+      transition:.5s;
   }
   .slides > div > h1{
       font-size: 32px;
@@ -55,6 +60,12 @@
       margin-bottom: 25px;
       background: #CCD851;
       border:none;
+      transition:.5s;
+      border-radius: 5px;
+  }
+  .slides button:hover{
+      transform:scale(1.05);
+      transition:.5s;
   }
   .slide_content img{
       max-width: 40%;
